# portfolio

./: .gitignore  README.md  allurerc.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: test_and_report_v2.yml
allure/: categories.json
openapi/: user-portfolio.yaml
tests/: conftest.py
tests/api/: test_orders_api.py  test_performance_profiles.py  test_portfolio_governance.py  test_portfolios_api.py
tests/contracts/: test_openapi_document.py  test_portfolio_contracts.py
tests/e2e/: test_portfolio_journeys.py
tests/fixtures/: auth.py  clients.py  config.py  data.py  http_mocks.py  openapi.py  runtime.py
tests/helpers/: allure_http.py  allure_scenarios.py  clients.py  factories.py  mock_payloads.py  openapi.py  runtime.py  schema_validation.py  settings.py
tests/integration/: test_portfolio_models.py
tests/public_sandbox/: test_petstore_live.py
